--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -3,6 +3,7 @@
 
 // * Component sheets imports
 @import './components/headerfooter.scss';
+@import './components/employeesingle.scss';
 
 // * Universal values
 * {
