--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -10,3 +10,7 @@
   font-family: Tahoma, Geneva, Verdana, sans-serif;
   font-size: $standard-font-size;
 }
+
+body {
+  background-color: $azure-web;
+}
