--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -5,6 +5,7 @@
 // * Component sheets imports
 @import './components/headerfooter.scss';
 @import './components/employeesingle.scss';
+@import './components/employeeedit.scss';
 @import './components/indices.scss';
 
 // * Universal values
