styles auth forms and adds logout functionality

--- a/client/src/assets/styles/components/headerfooter.scss
+++ b/client/src/assets/styles/components/headerfooter.scss
@@ -80,6 +80,12 @@ a{
   text-decoration: none;
 }
 
+.logoutButton{
+  background-color: $oxford-blue;
+  border: none;
+  margin-right: $standard-padding;
+}
+
 // Set breakpoint for smaller than a landscape table at 768px
 @media only screen and (max-width: 768px) {
   footer {
