--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -7,6 +7,7 @@
 @import './components/employeesingle.scss';
 @import './components/employeeedit.scss';
 @import './components/indices.scss';
+@import './components/authforms.scss';
 
 // * Universal values
 * {
